--- a/src/main/java/com/xprodswing/principal/XprodDesktopAdmin.form
+++ b/src/main/java/com/xprodswing/principal/XprodDesktopAdmin.form
@@ -75,6 +75,9 @@
               <Properties>
                 <Property name="text" type="java.lang.String" value="Gestion des clients"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jMenuItem1GestionClientActionPerformed"/>
+              </Events>
             </MenuItem>
           </SubComponents>
         </Menu>
